--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "moment": "^2.30.1",
+    "mssql": "^10.0.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "npm-react-dom": "^1.0.8",
+    "ntlm": "^0.1.3",
     "react": "^18.3.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.0",
