--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-jwt": "^6.1.2",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "mssql": "^10.0.2",
     "node-cron": "^3.0.3",
