Added reset password functionality/ Export to CSV and some minor css changes

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "express-jwt": "^6.1.2",
     "fs": "^0.0.1-security",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
