--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-pdf/renderer": "^3.4.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,8 +21,13 @@
     "express": "^4.19.2",
     "express-jwt": "^6.1.2",
     "fs": "^0.0.1-security",
+    "html-to-pdf": "^0.1.11",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.2",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "mssql": "^10.0.2",
@@ -32,8 +38,10 @@
     "react": "^18.3.0",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
