--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-jwt": "^6.1.2",
@@ -30,6 +31,7 @@
     "jspdf-autotable": "^3.8.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mssql": "^10.0.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
@@ -46,6 +48,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
