--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "antd": "^5.19.4",
     "axios": "^1.7.1",
     "bcrypt": "^5.1.1",
@@ -53,6 +54,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.0",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
