Modified userControl Component

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-to-pdf": "^0.1.11",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.2",
+    "i18next": "^23.12.2",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
@@ -49,17 +50,22 @@
     "ntlm": "^0.1.3",
     "react": "^18.3.0",
     "react-bootstrap": "^2.10.2",
+    "react-burger-menu": "^3.0.9",
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.0",
+    "react-i18next": "^15.0.0",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
+    "react-modern-drawer": "^1.3.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-slider": "^2.0.6",
     "react-spring": "^9.7.4",
     "react-toastify": "^10.0.5",
+    "react-transition-group": "^4.4.5",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12",
